# python-veracrypt

./: .gitignore  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  usage.rst
docs/sphinx/: conf.py  index.rst
src/veracrypt/: __about__.py  __init__.py  veracrypt.py
tests/: conftest.py  test_about.py  test_live.py  test_veracrypt.py
veracrypt/: __init__.py  veracrypt.py
