[project]
name = "python-veracrypt"
version = "0.1.0"
description = "A cross-platform Python wrapper for the VeraCrypt CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU GPL v3.0" }
authors = [{ name="srich", email="srichs@pm.me" }]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
