[project]
name = "python-veracrypt"
version = "0.1.1"
description = "A cross-platform Python wrapper for the VeraCrypt CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU GPL v3.0" }
authors = [{ name="srichs", email="srichs@pm.me" }]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
